# sem-rag

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  connectors.toml  pyproject.toml  test.py
.githooks/: pre-commit
.github/workflows/: ci.yml  secret-scan.yml
docs/: 00_playbook.md  01_artifact_contracts.md  02_quality_gates.md  03_agent_protocol.md  PIPELINE.md  PLANS.md  README.md  mvp-1.md  phase1.md
docs/agentic-docs/: 00_playbook.md  03_agent_protocol.md  README.md
docs/chunking/: 00_context.md  hierarchical_segmentation_rfc.md  hierarchical_segmentation_user_stories.md  test_plan_M0.md
docs/context-management/: backend-related-schema.md  doc-refactor-plan.md  in-gemini.md  refactoring.md
docs/harness/: AGENTS.md  README.md  layer-c-alignment-next-thread.md  maintainining.md  operator-map.md
docs/harness-maintain/: main.md  maintain-agents.md  maintain-readme.md
docs/parsers/: 00_context.md  01_rfc.md  02_user_stories.md  03_design.md  04_workplan.md
docs/runbooks/: local-dev.md
scripts/: README.md  run_marker.py  run_mineru.py  targets  targets.json  test_target.json  verify_marker.py  verify_mineru_targets.py  verify_targets.py
tests/: test_cli_connect.py  test_cli_smoke.py  test_config.py  test_connectors.py  test_connectors_local_file.py  test_local_connector.py  test_models_parser.py  test_parsers_canonicalization.py  test_parsers_pipeline.py  test_parsers_segmenter.py  test_parsers_structure.py  test_retrieval.py  test_secret_scan.py  test_segmentation.py
(+208 files in other folders)
